fixed small alignment issue when renaming games

--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -158,6 +158,11 @@
   overflow: hidden
   text-overflow: ellipsis
 
+.name-height
+  height: 1.625rem
+  display: flex
+  align-items: center
+
 .company-title, .company
   width: 9.875rem
   min-width: 9.875rem
@@ -205,6 +210,11 @@
   overflow-x: hidden
   text-overflow: ellipsis
   white-space: nowrap
+
+.images-view-game-name-height
+  height: 1.875rem
+  display: flex
+  align-items: center
 
 .images-view-game-data
   font-size: .8rem
